validaciones en envios y hojas